--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="title_activity_maps">Map</string>
     <string name="server_client_id">1054636785796-j4ekc1r25nlmq0ut4fgehdqbi3i1o1on.apps.googleusercontent.com</string>
     <string name="login_url">\"http://\"</string>
+    <string name="action_service_selector">Service Selector</string>
 
 </resources>
