--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="server_client_id">1054636785796-j4ekc1r25nlmq0ut4fgehdqbi3i1o1on.apps.googleusercontent.com</string>
     <string name="login_url">\"http://\"</string>
     <string name="action_service_selector">Service Selector</string>
+    <string name="gcm_defaultSenderId">1054636785796</string>
 
 </resources>
