--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,11 @@
     <string name="server_client_id">1054636785796-j4ekc1r25nlmq0ut4fgehdqbi3i1o1on.apps.googleusercontent.com</string>
     <string name="action_service_selector">Service Selector</string>
     <string name="gcm_defaultSenderId">1054636785796</string>
+    <string name="invitation_title">Get Done Now Invite</string>
+    <string name="invitation_message">Come join Get Done Now</string>
+    <string name="invitation_deep_link">http://example.com/offer/five_dollar_offer</string>
+    <string name="invitation_custom_image">https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png</string>
+    <string name="invitation_cta">Install !!</string>
+    <string name="sent_invitations_fmt">Sent %d invitations</string>
 
 </resources>
